--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-numpy==1.18.5
-opencv-python==4.2.0.32
-opencv-contrib-python==4.2.0.32
-scipy==1.5.0
+numpy==1.22.1
+# opencv-python==4.5.4.58
+scipy==1.7.3
 matplotlib==3.2.2
-torch==1.5.1
-torchvision==0.6.1
-onnx==1.7.0
-onnxruntime==1.2.0
+pytorch==1.10.2
+torchvision==0.11.3
+onnx==1.10.0
+onnxruntime==1.10.0
+
